--- a/Front/myApp/src/styles.css
+++ b/Front/myApp/src/styles.css
@@ -44,6 +44,18 @@ button {
   color: black !important;
 }
 
+.buttonRed {
+  background-color: rgb(175, 4, 4) !important;
+  transform: scale(0.98);
+  color: black !important;
+}
+
+.buttonYellow {
+  background-color: rgb(175, 158, 4) !important;
+  transform: scale(0.98);
+  color: black !important;
+}
+
 .buttonLight:hover {
   background-color: #f88f3b !important;
   transform: scale(0.98);
