--- a/Front/myApp/src/ImageReveal.css
+++ b/Front/myApp/src/ImageReveal.css
@@ -6,7 +6,8 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    bottom: 20px;
+    bottom: 40px;
+    margin-left: -20px;
     border: 1px solid rgba(255, 255, 255, 0.5);
   }
   
